--- a/FilmsApp/FilmsApp/Models/ScreenShotCollectionViewCell.xib
+++ b/FilmsApp/FilmsApp/Models/ScreenShotCollectionViewCell.xib
@@ -10,15 +10,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="GalleryPreviewCell" id="gTV-IL-0wX" customClass="ScreenShotCollectionViewCell" customModule="FilmsApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="147" height="154"/>
-            <autoresizingMask key="autoresizingMask"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="GalleryPreviewCell" translatesAutoresizingMaskIntoConstraints="NO" id="gTV-IL-0wX" customClass="ScreenShotCollectionViewCell" customModule="FilmsApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="147" height="154"/>
+                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="z3j-HL-RNG">
-                        <rect key="frame" x="0.0" y="0.0" width="147" height="154"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="z3j-HL-RNG">
+                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="128" id="O8p-VM-fVj"/>
+                            <constraint firstAttribute="width" constant="128" id="rpr-vC-GvQ"/>
+                        </constraints>
                     </imageView>
                 </subviews>
             </view>
