--- a/FilmsApp/FilmsApp/Views/BigScreenShotCollectionViewCell.xib
+++ b/FilmsApp/FilmsApp/Views/BigScreenShotCollectionViewCell.xib
@@ -10,31 +10,32 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="GalleryPreviewCell" translatesAutoresizingMaskIntoConstraints="NO" id="gTV-IL-0wX" customClass="ScreenShotCollectionViewCell" customModule="FilmsApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ScreenShotGalleryCell" id="gTV-IL-0wX" customClass="BigScreenShotCollectionViewCell" customModule="FilmsApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="256" height="256"/>
+            <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                <rect key="frame" x="0.0" y="0.0" width="256" height="256"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="z3j-HL-RNG">
-                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Xhs-Np-stg">
+                        <rect key="frame" x="0.0" y="0.0" width="256" height="256"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="128" id="O8p-VM-fVj"/>
-                            <constraint firstAttribute="width" constant="128" id="rpr-vC-GvQ"/>
+                            <constraint firstAttribute="width" constant="256" id="T0O-8j-CQM"/>
+                            <constraint firstAttribute="height" constant="256" id="uCj-Qb-zVO"/>
                         </constraints>
                     </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="z3j-HL-RNG" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="QoY-ZR-RjD"/>
-                <constraint firstItem="z3j-HL-RNG" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="RBG-VF-r60"/>
+                <constraint firstItem="Xhs-Np-stg" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Vgc-pT-AkD"/>
+                <constraint firstItem="Xhs-Np-stg" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="fDN-ID-PUY"/>
             </constraints>
-            <size key="customSize" width="147" height="154"/>
+            <size key="customSize" width="598" height="703"/>
             <connections>
-                <outlet property="screnshotImageView" destination="z3j-HL-RNG" id="fkL-KV-c7e"/>
+                <outlet property="screenshotImageView" destination="Xhs-Np-stg" id="OSA-Ll-aGD"/>
             </connections>
-            <point key="canvasLocation" x="-292.02898550724638" y="41.517857142857139"/>
+            <point key="canvasLocation" x="37.681159420289859" y="104.46428571428571"/>
         </collectionViewCell>
     </objects>
 </document>
