--- a/FilmsApp/FilmsApp/Views/Base.lproj/Main.storyboard
+++ b/FilmsApp/FilmsApp/Views/Base.lproj/Main.storyboard
@@ -475,14 +475,14 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="LQH-Sx-Qmw">
                                 <rect key="frame" x="0.0" y="87" width="414" height="755"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="SmV-7E-aRn">
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="SmV-7E-aRn">
                                     <size key="itemSize" width="416" height="750"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FullPicCell" id="yvH-bj-HN3">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="FullPicCell" id="yvH-bj-HN3">
                                         <rect key="frame" x="0.0" y="2.5" width="416" height="750"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="peT-M6-l8c">
@@ -511,13 +511,13 @@
                         <viewLayoutGuide key="safeArea" id="IJc-xx-GSB"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="IJc-xx-GSB" firstAttribute="trailing" secondItem="LQH-Sx-Qmw" secondAttribute="trailing" id="FhN-xJ-UIk"/>
+                            <constraint firstItem="LQH-Sx-Qmw" firstAttribute="leading" secondItem="IJc-xx-GSB" secondAttribute="leading" id="0aF-ZL-SJo"/>
                             <constraint firstItem="LQH-Sx-Qmw" firstAttribute="top" secondItem="uhe-M9-e3q" secondAttribute="bottom" constant="15" id="GA3-9l-nnF"/>
                             <constraint firstItem="IJc-xx-GSB" firstAttribute="bottom" secondItem="LQH-Sx-Qmw" secondAttribute="bottom" id="Iqj-rc-N7T"/>
-                            <constraint firstItem="LQH-Sx-Qmw" firstAttribute="leading" secondItem="IJc-xx-GSB" secondAttribute="leading" id="QXv-9K-bVN"/>
                             <constraint firstItem="uhe-M9-e3q" firstAttribute="leading" secondItem="IJc-xx-GSB" secondAttribute="leading" constant="20" id="eyK-tJ-l5f"/>
                             <constraint firstItem="uhe-M9-e3q" firstAttribute="top" secondItem="IJc-xx-GSB" secondAttribute="top" constant="5" id="jvz-CZ-FOX"/>
                             <constraint firstItem="IJc-xx-GSB" firstAttribute="trailing" secondItem="uhe-M9-e3q" secondAttribute="trailing" constant="20" id="nRg-RC-MIe"/>
+                            <constraint firstItem="LQH-Sx-Qmw" firstAttribute="trailing" secondItem="IJc-xx-GSB" secondAttribute="trailing" id="qlu-m1-SAt"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="P87-fH-cg0"/>
