--- a/FilmsApp/FilmsApp/Views/ScreenShotCollectionViewCell.xib
+++ b/FilmsApp/FilmsApp/Views/ScreenShotCollectionViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="GalleryPreviewCell" translatesAutoresizingMaskIntoConstraints="NO" id="gTV-IL-0wX" customClass="ScreenShotCollectionViewCell" customModule="FilmsApp" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" translatesAutoresizingMaskIntoConstraints="NO" id="gTV-IL-0wX" customClass="ScreenShotCollectionViewCell" customModule="FilmsApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
