--- a/FilmsApp/FilmsApp/Storyboads/Base.lproj/Main.storyboard
+++ b/FilmsApp/FilmsApp/Storyboads/Base.lproj/Main.storyboard
@@ -370,7 +370,7 @@
                 <tapGestureRecognizer id="pFI-es-95N">
                     <connections>
                         <outlet property="delegate" destination="kx0-o0-Z2N" id="eHa-iK-HkW"/>
-                        <segue destination="I36-pQ-rDp" kind="presentation" identifier="modalTap" id="pbp-qK-JMV"/>
+                        <segue destination="I36-pQ-rDp" kind="presentation" identifier="showPoster" id="pbp-qK-JMV"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
