--- a/FilmsApp/FilmsApp/Storyboads/Base.lproj/Main.storyboard
+++ b/FilmsApp/FilmsApp/Storyboads/Base.lproj/Main.storyboard
@@ -457,7 +457,7 @@
         <!--Single BackdropVC-->
         <scene sceneID="gmo-MY-zWi">
             <objects>
-                <viewController storyboardIdentifier="SingleScreenShotViewControllerID" id="QEL-fm-iQ3" customClass="SingleBackdropVC" customModule="FilmsApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SingleBackdropVC_ID" id="QEL-fm-iQ3" customClass="SingleBackdropVC" customModule="FilmsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="GPf-qo-1mv">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
